Code cleanup of index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flexbox exercise - Nailbiter Menu</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -18,7 +18,6 @@
                 <h1 class="logo">
                     <img class="icon" src="img/logo.svg" alt="Chas Academy">
                 </h1>
-
                 <label for="menu-toggle">
                     <div class="hamburger">
                         <div class="bar"></div>
@@ -34,9 +33,9 @@
             </div>
             <hr>
         </header>
-        <input id="menu-toggle" type="checkbox" />
+        <input id="menu-toggle" type="checkbox">
         <main id="menu">
-            <a href="#"><img class="icon" src="img/inbox-solid.svg" alt="Inbox" type="image/svg">Inbox</a>
+            <a href="#"><img class="icon" src="img/inbox-solid.svg" alt="Inbox">Inbox</a>
             <a href="#"><img class="icon" src="img/user-solid.svg" alt="Account">Account</a>
             <a href="#"><img class="icon" src="img/trash-solid.svg" alt="Trash Can">Trash Can </a>
             <a href="#"><img class="icon" src="img/calendar-week-solid.svg" alt="Calender">Calender</a>
